tests/error/modifier_errors/power_arg_type.py
from guppylang.decorator import guppy


@guppy
def test() -> None:
    with power(0.3):
        pass


test.compile()
