tests/error/modifier_errors/power_arg_type.err
Error: Type mismatch (at $FILE:6:15)
  | 
4 | @guppy
5 | def test() -> None:
6 |     with power(0.3):
  |                ^^^ Expected expression of type `nat`, got `float`

Guppy compilation failed due to 1 previous error
